force-app/main/default/objects/Stripe_Subscription__c/Stripe_Subscription__c.object-meta.xml
<CustomObject>
    <description>Stores Stripe subscription (recurring) lifecycle synced from Stripe webhooks and the Subscriptions API.</description>
    <label>Stripe Subscription</label>
    <nameField>
        <displayFormat>SP-SUB-{000000}</displayFormat>
        <label>Subscription Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stripe Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>