force-app/main/default/objects/Stripe_Subscription__c/fields/Cancel_At__c.field-meta.xml
<CustomField>
    <fullName>Cancel_At__c</fullName>
    <description>Scheduled end date: Stripe will automatically cancel the subscription at this time (the &quot;end date&quot; option). Blank means it recurs until manually canceled.</description>
    <label>Cancel At (Scheduled End)</label>
    <type>DateTime</type>
</CustomField>