force-app/main/default/objects/Stripe_Subscription__c/fields/Cancel_At_Period_End__c.field-meta.xml
<CustomField>
    <fullName>Cancel_At_Period_End__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancel At Period End</label>
    <type>Checkbox</type>
</CustomField>