force-app/main/default/objects/Stripe_Subscription__c/fields/Ended_At__c.field-meta.xml
<CustomField>
    <fullName>Ended_At__c</fullName>
    <description>When the subscription actually ended (Stripe ended_at) — set once it has stopped billing, whether by reaching its end date or being canceled.</description>
    <label>Ended At</label>
    <type>DateTime</type>
</CustomField>