force-app/main/default/objects/Stripe_Subscription__c/fields/Latest_Invoice_Id__c.field-meta.xml
<CustomField>
    <fullName>Latest_Invoice_Id__c</fullName>
    <label>Latest Invoice Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>