force-app/main/default/objects/Stripe_Subscription__c/fields/Paused__c.field-meta.xml
<CustomField>
    <fullName>Paused__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when Stripe pause_collection is set (payment collection paused). Stripe keeps status=active while paused, so this flag distinguishes Active vs Paused for the portal UI.</description>
    <label>Paused</label>
    <type>Checkbox</type>
</CustomField>