force-app/main/default/objects/Stripe_Subscription__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stripe Payment</label>
    <referenceTo>Stripe_Payment__c</referenceTo>
    <relationshipLabel>Stripe Subscriptions</relationshipLabel>
    <relationshipName>Stripe_Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>