force-app/main/default/objects/Stripe_Subscription__c/fields/Price_Id__c.field-meta.xml
<CustomField>
    <fullName>Price_Id__c</fullName>
    <label>Price Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>