force-app/main/default/objects/Stripe_Subscription__c/fields/Subscription_Id__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Id__c</fullName>
    <externalId>true</externalId>
    <label>Stripe Subscription Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>