force-app/main/default/objects/Stripe_Subscription__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Paused__c</columns>
    <columns>Current_Period_Start__c</columns>
    <columns>Current_Period_End__c</columns>
    <columns>Interval__c</columns>
    <columns>Currency__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>